2019.04.02 ver3.8.2 - Bug fix for Gtk+3 ver.
                      removed editable=FALSE for spin_button.
                      Fixed inappropriate default font name.

2019.03.31 ver3.8.1 - Database updated SDSS DR14 --> DR15 .
	            - Markup text style is applied to label and
	              tree_view_column.
                    - Added
	                gtkut.c   gtkut.h
                    - Revised SSL_connect() in http-client.c

2019.03.11 ver3.8.0 - LGS PAM (satellite collision data) plot functions for
	              IRCS obs (imported fromhoe).
                      In hskymon PAM data can be imported before/after object
                      list loading. In hoe PAM must be imported only after
	              otherwise.
	            - Revised overlay plot of HSC dithering pattern in FC.
 	            - Revised gtk_table/grid functions.
	            - Created lgs.c/lgs.h for LGS PAM functions.
                    - Added icons/lgs_icon.png .

2019.03.05 ver3.7.0 - Created io_gui.c/h for Open/Save files.

2019.01.02 ver3.6.5 - TTGS/Offset NGS for AO188 obs. are hidden by "-" button
	              skymon GUI.
                    - Added modal window operations.
                    - Revised FC mode selecter.
                    - Revised FC drawing codes.
                    - Guide Star drawing on FC for IRCS.
	              (OPE files written by hoe-4.0.0 or later are required.)

2018.11.14 ver3.6.4 - Changed lower limit for Telescope Velocity
	              (0.1 --> 0.01).

2018.10.26 ver3.6.3 - Remake Object List tree in Sync OPE.
	            - Added Kepler IC10 for FCDB.
	            - Updated LAMOST database to DR4.
	            - Added command line option "-d" to show HTTP debug
	              messages.
	            - Added PFS for the new instrument on FC.

2018.07.16 ver3.6.2 - Added HSC masking area plot for bright srats
	              with FCDB GAIA search.
	              (Recommend to use for GAIA G < ~12 mag)