@@ -752,7 +752,7 @@ void set_hsc_dither (GtkWidget *widget, gpointer gdata)
 		     cc_get_adj,
 		     &hg->hsc_show_dith_r);
 
-  label=gtk_label_new("TDITH [&#xB5;]");
+  label=gtk_label_new("TDITH [deg]");
 #ifdef USE_GTK3
   gtk_widget_set_halign(label,GTK_ALIGN_CENTER);
   gtk_widget_set_valign(label,GTK_ALIGN_CENTER);
@@ -4850,14 +4850,24 @@ void fcdb_item2 (typHOE *hg)
   case FCDB_TYPE_USNO:
     ln_equ_to_hequ (&object_prec, &hobject_prec);
     if(hg->fcdb_host) g_free(hg->fcdb_host);
-    hg->fcdb_host=g_strdup(FCDB_HOST_USNO);
+    switch(hg->fcdb_vizier){
+    case FCDB_VIZIER_STRASBG:
+      hg->fcdb_host=g_strdup(FCDB_HOST_VIZIER_STRASBG);
+      break;
+    case FCDB_VIZIER_NAOJ:
+      hg->fcdb_host=g_strdup(FCDB_HOST_VIZIER_NAOJ);
+      break;
+    default:
+      hg->fcdb_host=g_strdup(FCDB_HOST_VIZIER_HARVARD);
+      break;
+    }
     if(hg->fcdb_path) g_free(hg->fcdb_path);
 
     hg->fcdb_d_ra0=object_prec.ra;
     hg->fcdb_d_dec0=object_prec.dec;
 
-    if(hg->fcdb_usno_fil){
-      url_param=g_strdup_printf("&clr=R2&fai=%d&",hg->fcdb_usno_mag);
+    if(hg->fcdb_gaia_fil){
+      url_param=g_strdup_printf("&R2mag=%%3C%d&",hg->fcdb_usno_mag);
     }
     else{
       url_param=g_strdup("&");
@@ -4867,10 +4877,13 @@ void fcdb_item2 (typHOE *hg)
 				  hg->fcdb_d_ra0,
 				  hg->fcdb_d_dec0,
 				  (hg->dss_arcmin < hg->fcdb_usno_diam) ?
-				  ((double)hg->dss_arcmin/2./60.) :
-				  ((double)hg->fcdb_usno_diam/2./60.),
+				  (hg->dss_arcmin*30) : 
+				  (hg->fcdb_gaia_diam*30),
+				  (hg->dss_arcmin < hg->fcdb_usno_diam) ?
+				  (hg->dss_arcmin*30) : 
+				  (hg->fcdb_usno_diam*30),
 				  url_param);
-
+    
     if(url_param) g_free(url_param);
     if(hg->fcdb_file) g_free(hg->fcdb_file);
     hg->fcdb_file=g_strconcat(hg->temp_dir,
